<resources>
    <string name="app_name">LoanTrak</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Change Language</string>


    <string name="menu_home">About Us</string>
    <string name="menu_gallery">Dashboard</string>
    <string name="menu_slideshow">Loan History</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="if_you_don_t_have_acccount">If you don\'t have account ?</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="pin_example_2324">PIN example : 2324</string>
    <string name="confirm_pin">Confirm PIN</string>
    <string name="if_you_have_already_account">If you have already account ?</string>
    <string name="enter_pinorpassword">Enter Pin</string>
    <string name="submit">Submit</string>
    <string name="pleaseenteralldetails">Please Enter All Details</string>
    <string name="wrongusername">Wrong Username</string>
    <string name="wrongpassword">Wrong Password</string>
    <string name="usernamealreadytaken">Username already taken</string>
    <string name="passwordnotmatching">Password not matching</string>
    <string name="pinnotmatching">PIN not matching</string>
    <string name="successfulregistered">Successfully Registered</string>
    <string name="incorrectpin">Incorrect</string>
    <string name="choose_language">Choose Language</string>
    <string name="select_language">Select Language</string>
    <string name="welcome">Welcome !</string>
    <string name="apptext">"In finance, a loan is the lending of money by one or more individuals, organizations, or other entities to other individuals, organizations etc. "</string>
    <string name="name">Name </string>
    <string name="amount">Amount </string>
    <string name="enter_amount">Enter Amount</string>
    <string name="description">Reason</string>
    <string name="enter_description">Enter reason</string>
    <string name="date">Date </string>
    <string name="save">Save</string>
    <string name="added">Added</string>
    <string name="no_data_found">No Loans to show. Please add or intiate a loan below</string>
    <string name="status">Status </string>
    <string name="not_paid">NOT PAID</string>
    <string name="paid">PAID</string>
    <string name="updated">Updated</string>
    <string name="total_loan_amount">Loan Amount </string>
    <string name="total_loans">Total Loans </string>
    <string name="total_unpaid_loans">Total Unpaid Loans </string>
    <string name="all_pending_loans">Loans </string>
    <string name="pending_loans">Pending Loans</string>
    <string name="add_loan">Add Loan</string>
    <string name="dashboard">Dashboard</string>
    <string name="viewloan">View Loan</string>
    <string name="addloan">Add Loan</string>
    <string name="selectdate">Select Date</string>
    <string name="amountt">Amount </string>
    <string name="delete">Delete</string>
    <string name="areyousuredoyouwanttodeleteit">Are you sure do you want to delete it ?</string>
    <string name="phone">Phone</string>
    <string name="phone_number">Phone Number</string>
    <string name="selectperson">Select Person</string>
    <string name="startdate">Start Date </string>
    <string name="interest">Interest (%) </string>
    <string name="emi">Monthly amount </string>
    <string name="enter_interest">Enter Interest</string>
    <string name="enter_emi">Enter Monthly amount </string>
    <string name="menu_inviteus">Invite Us</string>
    <string name="duration">Duration</string>
    <string name="menu_logout">Log out</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="loangiven">Loan Given</string>
    <string name="loantaken">Loan Taken</string>
    <string name="active_loans">Active Loans</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="user_name">User Name</string>
    <string name="phone_number_2_optional">Phone Number 2 (Optional)</string>
    <string name="aadhar">Aadhar</string>
    <string name="address_line_1">Address line 1</string>
    <string name="address_line_2">Address line 2</string>
    <string name="address_line_3_optional">Address line 3 (Optional)</string>
    <string name="address_line_3">Address Line 3</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="zip_code">Zip Code</string>
    <string name="pleasefillupalldetails">Please fill up profile details before requesting loan</string>
    <string name="request_loan">Request Loan</string>
    <string name="notifications">Notifications</string>
    <string name="view_loan">View Loan</string>
    <string name="update_transaction">Update Transaction</string>
    <string name="loan_Details">Loan Details</string>
    <string name="my_profile">My Profile</string>
    <string name="groups">Groups</string>
    <string name="more">More</string>
    <string name="set_pin">Set Pin</string>
    <string name="about_us">About us</string>
    <string name="enter_reason">Enter reason</string>
    <string name="loan_type">Loan Type</string>
    <string name="made_changes">Made Changes</string>
    <string name="cannot_make_changes">Cannot Make Changes</string>
    <string name="accept">Accept</string>
    <string name="or">Or</string>
    <string name="enter_comments">Enter comments</string>
    <string name="request_change">Request-Change</string>
    <string name="loans_under_review">Loans Under Review</string>
    <string name="payment_calendar">Payment calendar</string>
    <string name="due_date">Due date</string>
    <string name="transactions">Transactions</string>
    <string name="update">Update</string>
    <string name="changepin">Change Pin</string>
    <string name="payment_type">Payment Type</string>
    <string name="principal">Principal</string>
    <string name="cancel_loan"><u>Cancel Loan</u></string>
</resources>