<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/tabViewFragment"
            android:icon="@drawable/ic_action_home"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/loanHistoryFragment"
            android:icon="@drawable/ic_action_history"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/addloan"
            android:icon="@drawable/ic_action_plus"
            android:title="@string/addloan" />
        <item
            android:id="@+id/profileFragment"
            android:icon="@drawable/ic_action_group"
            android:title="Group" />
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/ic_action_more"
            android:title="More" />
    </group>
</menu>