<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/about_us"
        android:orderInCategory="100"
        android:title="About us"
        android:icon="@drawable/ic_action_aboutus"
        app:showAsAction="withText" />
    <item
        android:id="@+id/set_pin"
        android:orderInCategory="100"
        android:title="Set Pin"
        app:showAsAction="withText" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_inviteus"
        android:orderInCategory="100"
        android:title="@string/menu_inviteus"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/menu_logout"
        app:showAsAction="never" />



</menu>