<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/splashScreenFragment">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.loantrackingsystem.app.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_addLoanFragment"
            app:destination="@id/addLoanFragment" />
        <action
            android:id="@+id/action_nav_home_to_nav_gallery"
            app:destination="@id/nav_gallery" />
        <action
            android:id="@+id/action_nav_home_to_viewLoanFragment"
            app:destination="@id/viewLoanFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.loantrackingsystem.app.ui.dashboard.DashboardFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_nav_gallery_to_addLoanFragment"
            app:destination="@id/addLoanFragment" />
        <action
            android:id="@+id/action_nav_gallery_to_viewLoanFragment"
            app:destination="@id/viewLoanFragment" />
        <action
            android:id="@+id/action_nav_gallery_to_requestLoanFragment"
            app:destination="@id/requestLoanFragment" />
    </fragment>

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.loantrackingsystem.app.ui.login.LoginFragment"
        android:label="LoginFragment" >
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
        <action
            android:id="@+id/action_loginFragment_to_pinFragment"
            app:destination="@id/pinFragment" />
        <action
            android:id="@+id/action_loginFragment_to_nav_gallery"
            app:destination="@id/nav_gallery" />
        <action
            android:id="@+id/action_loginFragment_to_nav_home"
            app:destination="@id/nav_home" />
        <action
            android:id="@+id/action_loginFragment_to_tabViewFragment"
            app:destination="@id/tabViewFragment" />
    </fragment>
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.loantrackingsystem.app.ui.login.RegisterFragment"
        android:label="RegisterFragment" >
        <action
            android:id="@+id/action_registerFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
        <action
            android:id="@+id/action_registerFragment_to_pinFragment"
            app:destination="@id/pinFragment"
            app:popUpToInclusive="true"
            app:popUpTo="@id/pinFragment"/>
        <action
            android:id="@+id/action_registerFragment_to_tabViewFragment"
            app:destination="@id/tabViewFragment" />
    </fragment>
    <fragment
        android:id="@+id/pinFragment"
        android:name="com.loantrackingsystem.app.ui.login.PinFragment"
        android:label="PinFragment">
        <action
            android:id="@+id/action_pinFragment_to_nav_home"
            app:destination="@id/nav_home"
            app:popUpToInclusive="true"
            app:popUpTo="@id/mobile_navigation"/>
        <action
            android:id="@+id/action_pinFragment_to_nav_gallery"
            app:destination="@id/nav_gallery" />
        <action
            android:id="@+id/action_pinFragment_to_tabViewFragment"
            app:destination="@id/tabViewFragment" />
    </fragment>
    <fragment
        android:id="@+id/addLoanFragment"
        android:name="com.loantrackingsystem.app.ui.loan.AddLoanFragment"
        android:label="@string/addloan" />
    <fragment
        android:id="@+id/viewLoanFragment"
        android:name="com.loantrackingsystem.app.ui.loan.ViewLoanFragment"
        android:label="@string/viewloan" >
        <action
            android:id="@+id/action_viewLoanFragment_to_updateTransactionFragment"
            app:destination="@id/updateTransactionFragment" />
        <action
            android:id="@+id/action_viewLoanFragment_to_adhocFragment"
            app:destination="@id/adhocFragment" />
    </fragment>
    <fragment
        android:id="@+id/loanHistoryFragment"
        android:name="com.loantrackingsystem.app.ui.loan.LoanHistoryFragment"
        android:label="@string/menu_slideshow" >
        <action
            android:id="@+id/action_loanHistoryFragment_to_viewLoanFragment"
            app:destination="@id/viewLoanFragment" />
    </fragment>
    <fragment
        android:id="@+id/languageFragment"
        android:name="com.loantrackingsystem.app.ui.login.LanguageFragment"
        android:label="LanguageFragment" >
        <action
            android:id="@+id/action_languageFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>
    <fragment
        android:id="@+id/splashScreenFragment"
        android:name="com.loantrackingsystem.app.ui.login.SplashScreenFragment"
        android:label="SplashScreenFragment" >

        <action
            android:id="@+id/action_splashScreenFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpToInclusive="true"
            app:popUpTo="@id/splashScreenFragment"/>
        <action
            android:id="@+id/action_splashScreenFragment_to_languageFragment"
            app:destination="@id/languageFragment" />
        <action
            android:id="@+id/action_splashScreenFragment_to_nav_gallery2"
            app:destination="@id/nav_gallery" />
        <action
            android:id="@+id/action_splashScreenFragment_to_pinFragment"
            app:destination="@id/pinFragment" />
        <action
            android:id="@+id/action_splashScreenFragment_to_currencyFragment"
            app:destination="@id/currencyFragment" />
        <action
            android:id="@+id/action_splashScreenFragment_to_userProfileFragment"
            app:destination="@id/userProfileFragment" />
    </fragment>

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.loantrackingsystem.app.ui.home.ProfileFragment"
        android:label="@string/groups" />
    <fragment
        android:id="@+id/tabViewFragment"
        android:name="com.loantrackingsystem.app.ui.dashboard.TabViewFragment"
        android:label="TabViewFragment" >
        <action
            android:id="@+id/action_tabViewFragment_to_viewLoanFragment"
            app:destination="@id/viewLoanFragment" />
        <action
            android:id="@+id/action_tabViewFragment_to_addLoanFragment"
            app:destination="@id/addLoanFragment" />
        <action
            android:id="@+id/action_tabViewFragment_to_loanDetailsFragment"
            app:destination="@id/loanDetailsFragment" />
        <action
            android:id="@+id/action_tabViewFragment_to_viewReviewLoanFragment"
            app:destination="@id/viewReviewLoanFragment" />
        <action
            android:id="@+id/action_tabViewFragment_to_notificationFragment"
            app:destination="@id/notificationFragment" />
    </fragment>
    <fragment
        android:id="@+id/userProfileFragment"
        android:name="com.loantrackingsystem.app.ui.home.UserProfileFragment"
        android:label="@string/my_profile" />
    <fragment
        android:id="@+id/loanDetailsFragment"
        android:name="com.loantrackingsystem.app.ui.loan.LoanDetailsFragment"
        android:label="@string/loan_Details" >
        <action
            android:id="@+id/action_loanDetailsFragment_to_updateTransactionFragment"
            app:destination="@id/updateTransactionFragment" />
    </fragment>
    <fragment
        android:id="@+id/updateTransactionFragment"
        android:name="com.loantrackingsystem.app.ui.loan.UpdateTransactionFragment"
        android:label="@string/update_transaction" />
    <fragment
        android:id="@+id/viewReviewLoanFragment"
        android:name="com.loantrackingsystem.app.ui.loan.ViewReviewLoanFragment"
        android:label="@string/view_loan" />
    <fragment
        android:id="@+id/notificationFragment"
        android:name="com.loantrackingsystem.app.ui.dashboard.NotificationFragment"
        android:label="@string/notifications" >
        <action
            android:id="@+id/action_notificationFragment_to_viewReviewLoanFragment"
            app:destination="@id/viewReviewLoanFragment" />
        <action
            android:id="@+id/action_notificationFragment_to_userProfileFragment"
            app:destination="@id/userProfileFragment" />
    </fragment>
    <fragment
        android:id="@+id/requestLoanFragment"
        android:name="com.loantrackingsystem.app.ui.loan.RequestLoanFragment"
        android:label="@string/request_loan" />
    <fragment
        android:id="@+id/currencyFragment"
        android:name="com.loantrackingsystem.app.ui.login.CurrencyFragment"
        android:label="CurrencyFragment" >
        <action
            android:id="@+id/action_currencyFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>
    <fragment
        android:id="@+id/adhocFragment"
        android:name="com.loantrackingsystem.app.ui.loan.AdhocFragment"
        android:label="Adhoc Payment" />

</navigation>