<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_bg"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <ImageView
        android:id="@+id/iv_login"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        tools:src="@drawable/protection_illustration"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cd_login"
        app:layout_constraintVertical_bias="0.100000024"
        app:layout_constraintWidth_percent="0.9" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cd_pin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:cardElevation="0dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.9">

        <EditText
            android:id="@+id/ed_pin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/inter_regular"
            android:hint="@string/enter_pinorpassword"
            android:padding="16dp"
            android:inputType="numberPassword"
            android:gravity="start"
            android:maxLength="4"
            android:textColor="@color/black" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/cd_pin"
        app:layout_constraintTop_toBottomOf="@id/cd_pin"
        android:layout_marginTop="4dp"
        android:textStyle="bold"
        android:id="@+id/tv_forgetpassword"
        android:textColor="@color/purple_500"
        android:text="@string/forgot_password"/>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cd_confirmpin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="0dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cd_pin"
        app:layout_constraintWidth_percent="0.9">

        <EditText
            android:id="@+id/ed_confirmpin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/inter_regular"
            android:hint="@string/confirm_pin"
            android:padding="16dp"
            android:inputType="numberPassword"
            android:maxLength="4"
            android:textColor="@color/black" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cd_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cd_confirmpin"
        app:layout_constraintVertical_bias="0.110000014"
        app:layout_constraintWidth_percent="0.8">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/blue"
            android:fontFamily="@font/inter_bold"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>